--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -1,13 +1,16 @@
 {% load i18n %}
 {% load ndf_tags %}
 {% check_is_gstaff group_id request.user as is_gstaff %}
+{% get_download_filename node as download_filename %}
+
 <div class="row">
   <div class="medium 12 columns">
 	    <div class="left small-12 medium-6 columns">
 	                <label>File name: <b> {{node.name}} </b>
-	                    
+                  	                    
 	                    <!--<input type="text" placeholder="" name="resource_name" />-->
 	                </label>
+
 	      <div class="preview_asset"> 
 	         {% if title == "asset_content_detail" %}
 
@@ -19,6 +22,9 @@
           {% if 'audio' in node.if_file.mime_type or 'video' in node.if_file.mime_type or 'image' in node.if_file.mime_type %}
 
           <div class="right small-12 medium-6 columns">
+          <a class="text_button right"  href="{% url 'read_file' group_name_tag node download_filename %}"  download="{{ download_filename }}">
+                    <i class="fa fa-download" aria-hidden="true"></i> {% trans 'Download' %}
+          </a>
           {% if node.created_by == request.user.id or is_gstaff %}
                 <span data-dropdown="assetcontent-settings-drop" aria-controls="assetcontent-settings-drop" aria-expanded="false" class="orange-button right">
                     Link/Add Related File <i class="fa fa-chevron-down"></i>
