--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -543,6 +543,7 @@ h5{
             li {
                 background: $primary-blue;
 
+
                 &>a {
                     color: $secondry-blue;
                     line-height: 40px;
@@ -552,6 +553,7 @@ h5{
                     padding: 12px 0 12px 0;
                     font-family: "OpenSans-Regular";
                     font-size: 16px;
+
                 }
                 &:hover {
                     &>a {
@@ -559,6 +561,7 @@ h5{
                         //color: $primary-orange;
                         color:#fff;
                         //color: $header-link-hover-color;
+
                     }
                 }
 
@@ -3262,6 +3265,7 @@ Buddy Vertical Bar Css
 */
 
 $bp_background_color: #101d29;
+
 .buddy_panel {
     position: fixed;
     right: 0px;
@@ -4381,3 +4385,34 @@ ul.nav_menu_1 {
         border-left: 2.5px solid #ce7869;
     }
 }
+
+.buddy_margin{
+    margin-right: 70px;
+
+}
+
+.lms_explore_head{
+    width: 100%;
+    height: 40px;
+    background-color:#fff;
+    color: $primary-blue;
+    
+
+    >p{
+        margin-left: 81px;
+        padding: 3px 0px 0px 1px;
+        font-family: OpenSans-Semibold;
+        font-size: 20px;
+    }
+
+    >a{
+        padding: 7px 85px 3px 0px;
+    }
+
+    
+}
+
+.lms_explore_back{
+    background-color: #fff;
+}
+
