--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_form.html
@@ -1,13 +1,12 @@
 {% extends "ndf/gbase.html" %}
-{# {% load get_metadata_values get_attribute_value from ndf_tags %} #}
 
 {% block title %} {{title}} {% endblock %}
-{% block head %}
-{# <script type="text/javascript" src="/static/ndf/bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script> #}
-{% endblock %}
 
+{% block head %}
+	{# <script type="text/javascript" src="/static/ndf/bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script> #}
+{% endblock %}
 
 {% block body_content %}
-    {% include 'ndf/widget_node_form.html' with post_url=post_url node_obj=node_obj %}
+	{# <h4 class="text-center">{{title}}</h4> #}
+    {% include 'ndf/widget_node_form.html' with post_url=post_url node_obj=node_obj additional_form_fields=additional_form_fields%}
 {% endblock %}
-
