--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -1,9 +1,11 @@
+{% load get_dict_from_list_of_dicts from simple_filters %}
 {% load i18n %}
 <div class="module_card">
     <div class="card_banner">
         <span class="card_title">{{node.name}}</span>
 </div>
 
+    {% get_dict_from_list_of_dicts node.attribute_set as node_attrs %}
 
     <div class="card_summary">
         <div class="card_section">
@@ -13,11 +15,11 @@
         </div>
         <div class="card_section">
             <span class="card_label">
-                Subjects
+                {{node_attrs.educationalsubject}}
             </span class="card_label">
             <p class="ellipsis"></p>
                 <span class="card_label">
-                    Grades
+                    {{node_attrs.educationallevel}}
                 </span class="card_label">
             <p class="ellipsis"></p>
                 <span class="card_label">
