--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_tags.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_tags.html
@@ -58,9 +58,8 @@
 				<div class="row added-tags-div">
 					<div id="added_tags" class="small-9 small-push-3 columns">
 						{% for each_tag in node.tags %}
-							{% if each_tag != "asset@asset" and each_tag != "raw@material" and each_tag != "asset@gallery" %}
-								<div class="tags label radius info">{{each_tag}}<i title="Remove this tag" class="fi-x-circle remove-tag"></i></div>
-							{% endif %}
+							
+								<div {% if each_tag == "asset@asset" or each_tag == "raw@material" or each_tag == "asset@gallery" %} style="display:none"{% endif %} class="tags label radius info">{{each_tag}}<i title="Remove this tag" class="fi-x-circle remove-tag"></i></div>
 						{% endfor %}
 					</div>
 				</div>
