--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
@@ -1,6 +1,5 @@
 {% load i18n %}
-
-
+{% load get_relation_value from ndf_tags %}
 
 <div class="unit_card">
     {% comment %}
@@ -17,11 +16,27 @@
     {% endif %}
 
     <div class="unit_header">
-        <img class="unit_banner" src="/static/ndf/images/module_banner.png"/>
-            <span class="unit_title">{{node.name}}</span>
+    {% if "announced_unit" in node.member_of_names_list %}
+        {% get_relation_value node.pk 'has_banner_pic' as grel_dict %}
+        {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.if_file.thumbnail.relurl %}
+            <img src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.mid.relurl}}" alt="" style="height:50px ;width:50px" />
+        {% else %}
+            <img class="unit_banner" src="/static/ndf/images/module_banner.png" style="height:50px ;width:50px"/>
+        {% endif %}
+    {% elif "Group" in node.member_of_names_list %}
+        {% get_relation_value node.pk 'has_profile_pic' as grel_dict %}
+        {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.if_file.thumbnail.relurl %}
+            <img src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.mid.relurl}}" alt="" style="height:50px ;width:50px" />
+        {% else %}
+            <img class="unit_banner" src="/static/ndf/images/module_banner.png" style="height:50px ;width:50px"/>
+        {% endif %}
+    {% else %}
+        <img class="unit_banner" src="/static/ndf/images/module_banner.png" style="height:50px ;width:50px"/>
+    {% endif %}
+        <span class="unit_title" title="{{node.name}}">{{node.name|truncatechars:20}}</span>
     </div>
     <div class="unit_desc">
-        {{node.content|safe}}
+        {{node.content|safe|striptags|truncatechars:30}}
     </div>
     {% comment %}
     <div class="unit_breif">
