--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -4246,3 +4246,70 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   background-color: #fff;
   margin-top: -23.3px;
 }
+
+/* line 4437, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner {
+  width: 100%;
+  height: 200px;
+  background-image: url("/static/ndf/images/mydesk_banner.png");
+  background-size: 100% 100%;
+  position: relative;
+}
+/* line 4444, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner:before {
+  content: ' ';
+  background-color: rgba(0, 0, 0, 0.1);
+  opacity: .5;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  box-shadow: inset 0 0 40px rgba(0, 0, 0, 0.2);
+}
+/* line 4458, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile {
+  position: absolute;
+  bottom: 30px;
+  left: 40px;
+}
+/* line 4463, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .buddy_logo {
+  display: inline-block;
+  margin-right: 10px;
+  height: 100px;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #fff;
+}
+/* line 4471, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .buddy_logo svg {
+  height: 100px;
+  width: 100px;
+}
+/* line 4476, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .buddy_logo svg path {
+  fill: #7a422a;
+}
+/* line 4481, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .banner_heading {
+  color: #fff;
+  display: inline-block;
+  vertical-align: top;
+}
+/* line 4486, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .banner_heading .buddy_name {
+  font-size: 23px;
+  display: block;
+  margin-bottom: 10px;
+}
+/* line 4494, ../../../scss/_clix2017.scss */
+.mydesk_page .page_menu {
+  border-bottom: 1px solid #e5e5e5;
+}
+/* line 4498, ../../../scss/_clix2017.scss */
+.mydesk_page .page_menu li > a {
+  padding: 12px 20px 9px;
+}
