update menu for mobile view and change Explore Project to 'Explore' in header

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -61,9 +61,9 @@
             </ul>
             <ul class="right hide-for-medium-up dropdown-menu hide">
                 <li class=""><a href="#">My Desk</a></li>
-                <li><a  class="{%if title == 'courses'%}active{%endif%}" href="{% url explore_url %}">Explore Projects </a></li>
-                <li class=""><a href="#"> new Blog</a></li>
-                <li class=""><a href="#"><i class="fi-info"></i>&nbsp; new Help Topics</a></li>
+                <li><a  class="{%if title == 'courses'%}active{%endif%}" href="{% url explore_url %}">Explore </a></li>
+                <li class=""><a href="#"> Blog</a></li>
+                <li class=""><a href="#"><i class="fi-info"></i> Help Topics</a></li>
                 <!--li class="has-dropdown not-click">
                     <ul class="dropdown">
                         <!--li class="title back js-generated">
@@ -127,7 +127,7 @@
             <!-- Left Nav Section -->
             <ul class="left show-for-medium-up">
                 <li class=""><a href="#">My Desk</a></li>
-                <li><a  class="{%if title == 'courses'%}active{%endif%}" href="{% url explore_url %}">Explore Projects </a></li>   
+                <li><a  class="{%if title == 'courses'%}active{%endif%}" href="{% url explore_url %}"> Explore</a></li>
             </ul>
           </section>
     </nav>
