--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_explore.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_explore.html
@@ -1,27 +1,33 @@
-{% extends "ndf/gbase.html" %}
-{% load i18n %}
-{% block body_content %}
-
 {# lms_explore.html - for lms Explore Screen #}
 
 <div class="lms_explore_back">
       <div class="lms_explore_head">
         <p class="left"> Modules </p>
-        <a href="#" class="right text_button"><i class="fa fa-plus"> New Module</i></a>
       </div>
         <div class="small-12 columns">
-          {% include "ndf/horizontal_card.html" %}
+        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-2" >
+        {% for each_obj in modules_cur %}
+          <li class="card-image-wrapper">
+            {% include "ndf/horizontal_card.html" with node=each_obj url_name="module_detail" first_arg=group_id second_arg=each_obj.pk %}
+          </li>
+        {% empty %}
+          No modules found!
+        {% endfor %}
+        </ul>
         </div>
         <br/>
     <hr/>
     <div class="lms_explore_head_unit ">
         <p class="left"> Units </p>
-        <a href="#" class="right text_button"><i class="fa fa-plus"> New Unit</i></a>
     </div>
       <div class="small-12 columns lms_explore_back_unit">
-        {% include "ndf/card_group.html" %}
+        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+        {% for each_obj in units_cur %}
+          <li class="card-image-wrapper">
+            {% include "ndf/card_group.html" with node=each_obj url_name="groupchange" first_arg=each_obj.pk %}
+          </li>
+        {% endfor %}
+        </ul>
       </div>
     
 </div>
-  
-{% endblock body_content %}
