made grade field multiple select for Module form. Made multiple selected values to save for list attr in node.py

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -15,16 +15,16 @@
         </div>
         <div class="card_section">
             <span class="card_label">
-                {{node_attrs.educationalsubject}}
+                Subject: {{node_attrs.educationalsubject}}
             </span class="card_label">
             <p class="ellipsis"></p>
                 <span class="card_label">
-                    {{node_attrs.educationallevel}}
+                    Grade: {{node_attrs.educationallevel|join:', '}}
                 </span class="card_label">
             <p class="ellipsis"></p>
-                <span class="card_label">
+                <!-- <span class="card_label">
                     Units
-                </span class="card_label">
+                </span class="card_label"> -->
             <p class="ellipsis"></p>
         </div>
         <div class="card_section">
