--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -50,8 +50,20 @@
                 {% endif %}
             
             {% endif%}
-            {% if user.is_authenticated %}
+            
+            {% if user.is_authenticated  %}
+            
+                {% if 'raw material' in asset_obj.tags and is_gstaff %}
                 <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
+                {% endif %}
+                {% if 'gallery' in asset_obj.tags  %}
+                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
+                {% endif %}
+                {% if 'asset_list' in asset_obj.member_of_names_list  %}
+                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
+                {% endif %}
+            
+
             {% endif %}
             </div>
    </div>
