--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -1,3 +1,7 @@
+{% load ndf_tags %}
+
+{% check_is_gstaff groupid request.user as is_gstaff %}
+
 <div class="elibrary-actions">
 <!--     <button type="button" class="orange-button">
         <i class="fi-filter"> </i>
@@ -5,15 +9,26 @@
     </button>
 
  -->    <div class="row">
-        {% if user.is_authenticated %}
-            <button type="button" class="right orange-button createAsset">
-                <i class="fi-plus"> </i>
-                Add  {% if title == "raw material" %} Resource {% elif title == "gallery" %} File {% else %} Asset {% endif %}
-            </button>
+        {% if user.is_authenticated  %}
+            {% if title == "raw material"   and is_gstaff %}
+                <button type="button" class="right orange-button createAsset">
+                    <i class="fi-plus"> </i>Add Resource 
+                </button>
+            {% endif %}
+            {% if title == "gallery"  %}
+                <button type="button" class="right orange-button createAsset">
+                    <i class="fi-plus"> </i>Add File 
+                </button>
+            {% endif %}
+            {% if title == "asset_list"  %}
+                <button type="button" class="right orange-button createAsset">
+                    <i class="fi-plus"> </i>Add Asset 
+                </button>
+            {% endif %}
+        
         {% endif %}
         </div>
 </div>
-
 <div class="row listing-row"> 
       {% for each in asset_nodes %}
       <a href="{% url 'asset_detail' group_id each.pk %}"  title="{{each.name}}">
