title name corrcted

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -59,7 +59,7 @@
                 {% if 'asset@gallery' in asset_obj.tags  %}
                 <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
                 {% endif %}
-                {% if 'asset_detail' in asset_obj.member_of_names_list  %}
+                {% if title == 'asset_detail'   %}
                 <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
                 {% endif %}
             
