--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -104,11 +104,8 @@
 <input type="hidden" class="admin_analytics_fetched" value="False">
 
 <div id="course-about">
-<div class="row">
-<div class="small-12 columns about-course">
-  <!-- <h5>About this course</h5> -->
-  <div class="row">
-    <div class="small-12 columns">
+
+  <div class="about-course">
     <h5>Description:</h5>
       <div class="course-desc" id="scstyle">
           {{group_object.content|default:'No description added yet.'|safe}}
@@ -121,101 +118,158 @@
           <h5>Tags:</h5>
           {% for tag in group_object.tags %}
                   <small><label class="tag-ele">
-
               <a href="{% url 'tag_info' group_id tag %}">{{tag}} </a></label></small>
           {% endfor %} 
       {% else %}
           <i><small><label class="tag-ele">{% trans "No tags defined yet!" %}</label></small></i>
       {% endif %}
-
-    </div>
-    </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="small-12 columns about-course">
-    <h5>No. of Members</h5>
-    <div class="row">
-      <div class="small-12 medium-6 columns course-highlight">
-        <i class="fa fa-user"></i>
+  <div class="about-course">
+
+      <div class="medium-3 rows">
+        <div class="left">
+          <i class="icon-wid fa fa-user"></i>
+        </div>
+        <div class="left">
+          <h5>No. of Members</h5>
+          <div class="course-highlight">
         <span>
         {% if 'base_unit' in group_object.member_of_names_list %}
           {{group_object.author_set|length}} member{{group_object.author_set|length|pluralize}}
         {% else %}
         {{group_object.author_set|length}} student{{group_object.author_set|length|pluralize}} enrolled
         {% endif %}</span>
-      </div>
-    
 
-      {% if show_analytics_notifications %}
-      <div class="course-highlight">
-        <i class="fa fa-list"></i>
-        <span>{{group_object.collection_set|length}} Module{{group_object.collection_set|length|pluralize}}</span>
-      </div>
-      
-      <div class="course-highlight">
-        <i class="fa fa-clock-o"></i>
-        <span>{{weeks_count}} week{{weeks_count|pluralize}}</span>
-      </div>
-
-      {% endif %}
-    </div>
-  </div>
-</div>
-
-
-</div>
-{% if educationallevel_val %}
-  <div class="row">
-    <div class="small-12 columns about-course">
-      <h5>Grade</h5>
-      <div class="row">
-        <div class="small-12 medium-6 columns">
-          <div>
-              {{educationallevel_val}}
           </div>
         </div>
+      </div>
+      <br/>
+      <br/>
+     
+
+      {% if show_analytics_notifications %}
+      <div class="medium-3 rows">
+        <div class="left">
+          <i class="icon-wid fa fa-list"></i>
         </div>
+        <div class="left module_text">
+          <h5>No. of Modules</h5>
+          <div class="course-highlight">
+             <span>{{group_object.collection_set|length}} Lessons{{group_object.collection_set|length|pluralize}}</span>
+          </div>
+        </div>
+      </div>
+      <br/>
+
+     
+      
+      <br/>
+      
+      <div class="medium-3 rows">
+        <div class="left">
+          <i class="icon-wid fa fa-clock-o"></i>
+        </div>
+        <div class="left">
+          <h5>Course Duration</h5>
+          <div class="course-highlight">
+            <span>{{weeks_count}} week{{weeks_count|pluralize}}</span>
+          </div>
+        </div>
+      </div>
+      <br/>
+      {% endif %}
     </div>
-  </div>
+
+
+
+
+{% if educationallevel_val %}
+ 
+    <div class="about-course">
+    <div class="medium-3 rows">
+        <div class="left">
+          <i class="icon-wid fi-results-demographics"></i>
+        </div>
+        <div class="left">
+          <h5>Grade</h5>
+          <div class="course-highlight">
+             <span> {{educationallevel_val}}</span>
+          </div>
+        </div>
+      </div>
+      <br/>
+
+     
+      
+      <br/>
+      
+    </div>
+ 
 {% endif %}
 
 {% if educationalsubject_val %}
-  <div class="row">
-    <div class="small-12 columns about-course">
-      <h5>Subject</h5>
-      <div class="row">
-        <div class="small-12 medium-6 columns">
-          <div>
-              {{educationalsubject_val}}
+  
+    <div class="about-course">
+    <div class="medium-3 rows">
+        <div class="left">
+          <i class="icon-wid fa fa-book"></i>
+        </div>
+        <div class="left">
+          <h5>Subject</h5>
+          <div class="course-highlight">
+              <span>{{educationalsubject_val}}</span>
           </div>
         </div>
-        </div>
+      </div>
+      <br/>
+
+     
+      
+      <br/>
+
+      
+        {# </div> #}
     </div>
-  </div>
+  
 {% endif %}
 
-<div class="row">
-  <div class="small-12 columns about-course">
-    <h5>Created on</h5>
-    <div class="row">
-      <div class="small-12 medium-6 columns">
-        <div>
-            {{group_obj.created_at}}
+{# <div class="row"> #}
+  <div class="about-course">
+    <div class="medium-3 rows">
+        <div class="left">
+          <i class="icon-wid fa fa-calendar"></i>
+        </div>
+        <div class="left">
+          <h5>Created On</h5>
+          <div class="course-highlight">
+              <span> {{group_obj.created_at}}</span>
+          </div>
         </div>
       </div>
-      </div>
+      <br/>
+
+     
+      
+      <br/>
+  
+      {# </div> #}
   </div>
-</div>
+{# </div> #}
 
 <br/>
+<br/>
+
+
+
+
+
 
 {% if show_analytics_notifications %}
 {% check_is_gstaff group_id request.user as gstaff_access %}
   <div class="course-overview-container">
-    <div class="row collapse course-overview">
-      <div class="columns small-12 medium-12">
+    <div class="collapse course-overview">
+      {# <div class="columns small-12 medium-12"> #}
         {% comment %}
         <div class="ongoing-session">
           <h5>ONGOING SESSION </h5>
@@ -277,7 +331,7 @@
             </section>
           </div>
         </div>
-      </div>
+      {# </div> #}
     </div>
   </div>
   <script type="text/javascript">
