Lesson screen full width

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -891,6 +891,7 @@ ul.horizontal_tabs_gstudio {
         // min-height: 400px;
         background-color: #fff;
         margin-bottom: 100px;
+        margin-top:-18px;
     }
 
     .course_actions>span{
