--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -1,4 +1,10 @@
 {# lms_dashboard.html lms My Desk screen #}
+{% extends "ndf/gbase.html" %}
+
+{% block body_content %}
+{% load ndf_tags %}
+
+{% get_user_course_groups request.user.id as user_concern_groups %}
 
 <div class="mydesk_page">
         <div class="page_banner">
@@ -27,4 +33,31 @@
                 </li>
             </ul>
         </div>
+
+    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-2" >
+        {% for each_obj in modules_cur %}
+          <li class="card-image-wrapper">
+            {% include "ndf/horizontal_card.html" with node=each_obj url_name="module_detail" first_arg=group_id second_arg=each_obj.pk %}
+          </li>
+        {% empty %}
+          No modules found!
+        {% endfor %}
+        </ul>
+        </div>
+    </br>
+
+    <div class="small-12 columns group_sections_content">
+                {% if title == "my desk" %}
+                    <div class="small-12 columns lms_explore_back_unit">
+        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+        {% for each_obj in units_cur %}
+          <li class="card-image-wrapper">
+            {% include "ndf/card_group.html" with node=each_obj url_name="groupchange" first_arg=each_obj.pk %}
+          </li>
+        {% endfor %}
+        </ul>
+      </div>
+                {% endif %}
+        </div>
     </div>
+{% endblock  %}
