--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -2,12 +2,12 @@
 {% load simple_filters %}
 
 <div class="notebook">
-    <!--div class="row notebook-header collapse">
+    {% comment %}
+    div class="row notebook-header collapse">
         {% get_course_filters group_id title as filter_dict %}
         {% include "ndf/filters.html" with filter_dict=filter_dict %}
-    </div-->
+    </div
 
-    {% comment %}
     <div class="row notebook-header collapse">
         <div class="medium-6 columns filters">
             <div class="row" data-equalizer>
@@ -64,7 +64,7 @@
             <input type="text" placeholder="Search">
         </div>
     </div> -->
-    <div class="row notebook-body">
+    <div class="notebook-body">
         <div class="small-12 medium-4 large-3 columns notebook-index panel">
             <div class="row">
                 <div class="small-12 columns">
